<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#7f9c96"
    tools:context=".CheckoutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_medium"
        android:textSize="30sp"
        android:text="@string/premiumTitle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="70dp" />
    
    <LinearLayout
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_noads" />
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="25sp"
            android:text="@string/premiumBenefit1"
            android:layout_gravity="center_vertical"
            android:textColor="@color/app_color_light"
            android:layout_marginStart="20dp" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp">

        <ImageView
           android:layout_width="100dp"
           android:layout_height="100dp"
           android:src="@drawable/ic_lives" />
        <TextView
           android:layout_width="200dp"
           android:layout_height="wrap_content"
           android:fontFamily="@font/ubuntu_bold"
           android:textSize="25sp"
           android:text="@string/premiumBenefit2"
           android:layout_gravity="center_vertical"
           android:textColor="@color/app_color_light"
           android:layout_marginStart="20dp" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_chess" />
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="25sp"
            android:text="@string/premiumBenefit3"
            android:layout_gravity="center_vertical"
            android:textColor="@color/app_color_light"
            android:layout_marginStart="20dp" />
    </LinearLayout>
    <Button
        android:id="@+id/pay_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="#cbdf90"
        android:text="@string/pay"
        android:fontFamily="@font/ubuntu_medium" />


</LinearLayout>